--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Anek+Latin:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anek+Latin&display=swap');
 
 
 *{
@@ -33,7 +33,8 @@
     background-color: rgb(250, 250, 250);
     border-radius: 5px;
     font-family: 'Anek Latin', 'Courier New', Courier, monospace;
-    font-size: 25px;
+    font-size: 28px;
+    font-weight: 400;
     color: rgb(40, 2, 77);
     margin: 2px;
     cursor: pointer;
@@ -52,7 +53,8 @@
     border-radius: 5px;
     border: 0.8px solid rgb(250, 250, 250);
     font-family: 'Anek Latin', 'Courier New', Courier, monospace;
-    font-size: 30px;
+    font-size: 32px;
+    font-weight: 400;
     text-align: right;
     color: rgb(40, 2, 77);
 }
@@ -61,7 +63,7 @@
     font-family: 'Kalam', 'Courier New', Courier, monospace;
     color:rgb(40, 2, 77);
     font-weight: 300;
-    font-size: 20px;
+    font-size: 22px;
     position: relative;
     top:85%;    
 }
